PIG-99: Fix to make unit tests not run out of memory.
git-svn-id: https://svn.apache.org/repos/asf/incubator/pig/trunk@629654 13f79535-47bb-0310-9956-ffa450edef68